Organisms -> Services -> Bug: Images are too small for tiles; Fix: Enlarge images to fill white spaces

--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -63,7 +63,7 @@
     }
 
     &-image {
-      width: 100%;
+      width: 120%;
       transition: 250ms ease-in-out;
       z-index: -1;
       transform: translate(-50%, -50%);
